@startuml
title Diagramme de classes - TranscriBITE

class ProcessingState <<repository>> {
    -_state_file: Path
    -_processing_states: dict[UUID, ProcessingStatus]
    +add_processing(file_id, processing)
    +get_processing(file_id)
    +exists(file_id)
    +remove_processing(file_id)
}

class ProcessingStatus <<schema>> {
    +file_id: str
    +original_filename: str?
    +current_step: PipelineStep
    +current_status: StepStatus
    +progress_percentage: float
    +steps: list[ProcessingStep]
    +started_at: datetime?
    +finished_at: datetime?
    +transcription_result: dict?
    +quality_result: dict?
    +summary_result: dict?
}

class ProcessingStep <<schema>> {
    +step: PipelineStep
    +status: StepStatus
    +message: str?
    +started_at: datetime?
    +finished_at: datetime?
}

class TranscriptionData <<schema>> {
    +text: str
    +language: str
    +segments: list[dict]
}

class SummaryData <<schema>> {
    +summary: str
    +model: str
}

class PipelineOrder <<constant>> {
    PIPELINE_ORDER: list[PipelineStep]
}

enum PipelineStep {
    UPLOAD
    VALIDATION
    MEDIA_DETECTION
    AUDIO_QUALITY_ANALYSIS
    AUDIO_EXTRACTION
    TRANSCRIPTION
    SUMMARY_GENERATION
    RESULT_PREPARATION
    CLEANUP
    COMPLETED
    FAILED
}

enum StepStatus {
    PENDING
    IN_PROGRESS
    COMPLETED
    FAILED
}

ProcessingState "1" o-- "0..*" ProcessingStatus : persiste
ProcessingStatus "1" *-- "1..*" ProcessingStep : contient
ProcessingStatus --> PipelineStep : étape courante
ProcessingStatus --> StepStatus : statut courant
ProcessingStatus ..> TranscriptionData : transcription_result
ProcessingStatus ..> SummaryData : summary_result
PipelineOrder ..> PipelineStep : ordonne

note right of ProcessingState
  Stockage dans
  storage/cache/processing_states.json
end note
@enduml
